# Agentic_System_Design

./: ast_demo.py  prompt_eval.ipynb
advanced_rag/chroma-db/: .gitignore  Untitled  app.py  main.py  pyproject.toml  vector_stores.py
advanced_rag/chroma-db/chroma_stores/: chroma.sqlite3
advanced_rag/lang_course/: .gitignore  document_loaders.py  main.py  pyproject.toml  rag_pipeline.py  requirements.txt  sample.txt  simple_rag.py  tempfile.txt
capstone_project/: config.py  config.yaml  pyproject.toml
capstone_project/educosys_claude/observability/: logger.py
edu_claude/: .gitignore  pyproject.toml
edu_claude/config/: config.yaml
edu_claude/src/edu_claude/cli/: app.py
edu_claude/src/edu_claude/config/: __init__.py  loader.py  settings.py
edu_claude/src/edu_claude/models/: __init__.py  agent.py  task.py  tool.py  workflow.py
edu_claude/src/edu_claude/observability/: __init__.py  logger.py
edu_claude/src/edu_claude/workflows/: __init__.py  dag.py  exceptions.py
edu_claude/tests/unit/models/: test_workflow.py
edu_claude/tests/unit/workflows/: test_dag.py
memory_management/: 1_stateless.py  2_stm_ram.py  3_stm_sql.py  pyproject.toml  requirements.txt
memory_management/data/memory/: shortterm_memory_demo.db
sample_project/: auth.py
simple_conversation/: bm25rag.py  pyproject.toml  semanticrag.py  simple_convo.ipynb
