[project]
name = "educosys-claude"
version = "0.1.0"
description = ""
authors = [
    {name = "Priya Thevar",email = "priya.thevar89@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.2.2,<2.0.0)",
    "openai (>=2.44.0,<3.0.0)",
    "chromadb (>=1.5.9,<2.0.0)",
    "rich (>=15.0.0,<16.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]
[tool.poetry]
packages = [{include = "educosys_claude"}]

[tool.poetry.scripts]
educosys_claude = "educosys_claude.main:run"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
