[project]
name = "edu-claude"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Priya Raja", email = "priya.thevar89@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "structlog>=26.1.0",
    "typer>=0.26.8",
]

[project.scripts]
edu-claude = "edu_claude.cli.app:app"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
    "types-pyyaml>=6.0.12.20260518",
]
