[project]
name = "memory_management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.7",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.4.3",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.4",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
]
